Fix scrolling alignment and mobile menu bar

--- a/css/style.scss
+++ b/css/style.scss
@@ -81,8 +81,9 @@ a {
 #content {
     display: flex;
     min-height: 70%;
-    margin: 10% 4% 0 4%;
+    margin-top: 21.4vh;
     max-width: 1100px;
+    padding: 0 40px;
     position: relative;
     width: 100%;
 }
@@ -106,6 +107,7 @@ nav {
     padding-right: 55px;
     position: fixed;
     text-align: right;
+    margin-top: -32px;
 
     input {
         border-radius: 0;
@@ -119,7 +121,6 @@ nav {
         padding: 0;
         ul {
             display: none;
-            transition: 1s height ease;
         }
     }
     li {
@@ -174,7 +175,6 @@ nav {
     flex-grow: 1;
     font-size: 1.3rem;
     margin-left: 240px;
-    padding-top: 1.9rem;
     width: 100%;
     h2,
     h3,
@@ -310,6 +310,8 @@ nav {
     display: none;
 }
 
+$input-height: 28px;
+
 button,
 input {
     -webkit-appearance: none;
@@ -321,7 +323,8 @@ input {
     box-sizing: border-box;
     font-family: Adobe Caslon;
     font-size: 1rem;
-    height: 28px;
+    height: $input-height;
+    line-height: $input-height;
     margin: 8px 8px 8px 0;
     padding: 0 5px;
     text-rendering: optimizeLegibility;
@@ -357,6 +360,7 @@ $nav-height: 70px;
         font-size: 1.5rem;
         height: $nav-height;
         line-height: 2.4rem;
+        margin-top: 0;
         margin-bottom: 30px;
         overflow: hidden;
         padding: 0;
@@ -392,6 +396,7 @@ $nav-height: 70px;
     #content {
         display: block;
         margin: 0;
+        padding: 0;
         width: 100%;
     }
 
